[tool.poetry]
name = "ytm-grabber"
version = "0.0.1"
description = ""
authors = ["nickkitovsky <1825545+nickkitovsky@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ytm_grabber"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.24.1"
requests = "^2.31.0"
pytest = "^7.4.0"
yt-dlp = "^2023.7.6"
textual = "0.42.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.0"
textual-dev = "^1.1.0"
isort = "^5.12.0"
black = "^23.9.1"
wemake-python-styleguide = "^0.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

