[tool.poetry]
name = "ytm-grabber"
version = "0.0.1"
description = ""
authors = ["nickkitovsky <1825545+nickkitovsky@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ytm_grabber"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.24.1"
requests = "^2.31.0"
pytest = "^7.4.0"
yt-dlp = "^2023.7.6"
textual = "0.42.0"
pyperclip = "^1.8.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.0"
textual-dev = "^1.1.0"
ruff = "^0.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff] 
fix = true 
unsafe-fixes = true 
line-length = 120 
select = ["ALL"] 
ignore = ["D1", "D203", "D213", "FA102", "ANN101", "ANN102"] 
cache-dir = ".ruff-cache/" 

[tool.ruff.isort] 
no-lines-before = ["standard-library", "local-folder"] 
known-third-party = [] 
known-local-folder = ["whole_app"] 

[tool.ruff.extend-per-file-ignores] 
"tests/*.py" = ["ANN401", "S101", "S311"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"